--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostuser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@6fd83fc1]">testPostuser</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:32</td>   <td>4106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@6fd83fc1]">testDeleteUserByName</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:32</td>   <td>4106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@6fd83fc1]">testDeleteUserByName</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostuser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@6fd83fc1]">testPostuser</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:32</td>   <td>4106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testDeleteUserByName(java.lang.String)[pri:2, instance:api.test.DDTests@6fd83fc1]">testDeleteUserByName</td> 
-  <td>main@151593342</td>   <td></td> </tr>
-<tr bgcolor="68ff82">  <td>22/08/16 07:42:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTests.testPostuser(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.DDTests@6fd83fc1]">testPostuser</td> 
-  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/05/04 12:54:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BddCustomerXMLResponceTests.setup()[pri:0, instance:api.bdd_test.BddCustomerXMLResponceTests@53fdffa1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/05/04 12:54:33</td>   <td>1241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testSingleContent()[pri:1, instance:api.bdd_test.BddCustomerXMLResponceTests@53fdffa1]">testSingleContent</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/05/04 12:54:38</td>   <td>7013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContentOneGo()[pri:3, instance:api.bdd_test.BddCustomerXMLResponceTests@53fdffa1]">testMultipleContentOneGo</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/05/04 12:54:38</td>   <td>6416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContent()[pri:2, instance:api.bdd_test.BddCustomerXMLResponceTests@53fdffa1]">testMultipleContent</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
 </table>
