--- a/test-output/old/PetSuite/methods-alphabetical.html
+++ b/test-output/old/PetSuite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PetSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c9ba1">  <td>22/08/17 06:55:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTests2.setup()[pri:0, instance:api.test.UserTests2@2dc54ad4]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1077873186</td>   <td></td> </tr>
-<tr bgcolor="7c9ba1">  <td>22/08/17 06:55:40</td>   <td>10660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests2.testDeleteUserByName()[pri:4, instance:api.test.UserTests2@2dc54ad4]">testDeleteUserByName</td> 
-  <td>main@1077873186</td>   <td></td> </tr>
-<tr bgcolor="7c9ba1">  <td>22/08/17 06:55:36</td>   <td>6770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests2.testGetUserByName()[pri:2, instance:api.test.UserTests2@2dc54ad4]">testGetUserByName</td> 
-  <td>main@1077873186</td>   <td></td> </tr>
-<tr bgcolor="7c9ba1">  <td>22/08/17 06:55:31</td>   <td>1699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests2.testPostUser()[pri:1, instance:api.test.UserTests2@2dc54ad4]">testPostUser</td> 
-  <td>main@1077873186</td>   <td></td> </tr>
-<tr bgcolor="7c9ba1">  <td>22/08/17 06:55:37</td>   <td>8095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTests2.testUpdateUserByName()[pri:3, instance:api.test.UserTests2@2dc54ad4]">testUpdateUserByName</td> 
-  <td>main@1077873186</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/04 13:03:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BddCustomerXMLResponceTests.setup()[pri:0, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/04 13:04:05</td>   <td>6426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContent()[pri:2, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testMultipleContent</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/04 13:04:06</td>   <td>6981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContentOneGo()[pri:3, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testMultipleContentOneGo</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/04 13:04:00</td>   <td>1219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testSingleContent()[pri:1, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testSingleContent</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
 </table>
