--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">PetSuite</th></tr>
-<tr><td><a href="#t0">PetTests</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,266</td><td></td><td></td></tr>
+<tr><td><a href="#t0">PetTests</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,856</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PetSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">PetTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.bdd_test.BddCustomerXMLResponceTests</td><td><a href="#m0">testMultipleContent</a></td><td rowspan="1">1683185645807</td><td rowspan="1">551</td></tr><tr class="passedeven"><td><a href="#m1">testMultipleContentOneGo</a></td><td rowspan="1">1683185646362</td><td rowspan="1">445</td></tr><tr class="passedeven"><td><a href="#m2">testSingleContent</a></td><td rowspan="1">1683185640600</td><td rowspan="1">5165</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PetSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">PetTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">api.gorest.test.testJsonResponse</td><td><a href="#m0">testGorestData</a></td><td rowspan="1">1683282408618</td><td rowspan="1">8051</td></tr><tr class="passedodd"><td rowspan="2">api.gorest.test.testXMLResponse</td><td><a href="#m1">testInvoceData</a></td><td rowspan="1">1683282418634</td><td rowspan="1">477</td></tr><tr class="passedodd"><td><a href="#m2">testSingleContent</a></td><td rowspan="1">1683282416754</td><td rowspan="1">1875</td></tr></tbody>
 </table>
-<h2>PetTests</h2><h3 id="m0">api.bdd_test.BddCustomerXMLResponceTests#testMultipleContent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">api.bdd_test.BddCustomerXMLResponceTests#testMultipleContentOneGo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">api.bdd_test.BddCustomerXMLResponceTests#testSingleContent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>PetTests</h2><h3 id="m0">api.gorest.test.testJsonResponse#testGorestData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">api.gorest.test.testXMLResponse#testInvoceData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">api.gorest.test.testXMLResponse#testSingleContent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
