--- a/test-output/old/PetSuite/methods-alphabetical.html
+++ b/test-output/old/PetSuite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PetSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c971a1">  <td>23/05/04 13:03:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BddCustomerXMLResponceTests.setup()[pri:0, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">&gt;&gt;setup</td> 
+<tr bgcolor="7194ba">  <td>23/05/05 15:56:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testXMLResponse.setup()[pri:0, instance:api.gorest.test.testXMLResponse@7fee8714]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>23/05/04 13:04:05</td>   <td>6426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContent()[pri:2, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testMultipleContent</td> 
+<tr bgcolor="c971a1">  <td>23/05/05 15:56:48</td>   <td>-8170</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testJsonResponse.setup()[pri:0, instance:api.gorest.test.testJsonResponse@32ee6fee]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/05 15:56:48</td>   <td>-8107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testJsonResponse.testGorestData()[pri:2, instance:api.gorest.test.testJsonResponse@32ee6fee]">testGorestData</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>23/05/04 13:04:06</td>   <td>6981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testMultipleContentOneGo()[pri:3, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testMultipleContentOneGo</td> 
+<tr bgcolor="7194ba">  <td>23/05/05 15:56:58</td>   <td>1909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testXMLResponse.testInvoceData()[pri:2, instance:api.gorest.test.testXMLResponse@7fee8714]">testInvoceData</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>23/05/04 13:04:00</td>   <td>1219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BddCustomerXMLResponceTests.testSingleContent()[pri:1, instance:api.bdd_test.BddCustomerXMLResponceTests@5562c41e]">testSingleContent</td> 
+<tr bgcolor="7194ba">  <td>23/05/05 15:56:56</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testXMLResponse.testSingleContent()[pri:1, instance:api.gorest.test.testXMLResponse@7fee8714]">testSingleContent</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
