--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>api.gorest.test.testXMLResponse</td>
+<td>api.training.test.testUserDetails</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testInvoceData</td>
+<td>testUserData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSingleContent</td>
+<td>testResponseUserData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
