--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d09a64">  <td>23/05/05 15:44:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testXMLResponse.testSingleContent()[pri:1, instance:api.gorest.test.testXMLResponse@4d465b11]">testSingleContent</td> 
-  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d09a64">  <td>23/05/05 15:44:20</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testXMLResponse.setup()[pri:0, instance:api.gorest.test.testXMLResponse@4d465b11]">&gt;&gt;setup</td> 
+<tr bgcolor="d09a64">  <td>23/05/09 17:26:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testUserDetails.setup()[pri:0, instance:api.training.test.testUserDetails@3232a28a]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="d09a64">  <td>23/05/05 15:44:25</td>   <td>5359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testXMLResponse.testInvoceData()[pri:2, instance:api.gorest.test.testXMLResponse@4d465b11]">testInvoceData</td> 
+<tr bgcolor="d09a64">  <td>23/05/09 17:26:51</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testUserData()[pri:1, instance:api.training.test.testUserDetails@3232a28a]">testUserData</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/05/09 17:26:56</td>   <td>5192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testResponseUserData()[pri:2, instance:api.training.test.testUserDetails@3232a28a]">testResponseUserData</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
