--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">PetSuite</th></tr>
-<tr><td><a href="#t0">PetTests</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,208</td><td></td><td></td></tr>
+<tr><td><a href="#t0">PetTests</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,862</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PetSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">PetTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">api.training.test.testUserDetails</td><td><a href="#m0">testResponseUserData</a></td><td rowspan="1">1683633919843</td><td rowspan="1">2714</td></tr><tr class="passedeven"><td><a href="#m1">testUserData</a></td><td rowspan="1">1683633916217</td><td rowspan="1">3600</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">PetSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">PetTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.training.test.testUserDetails</td><td><a href="#m0">testGetJsonfieldData</a></td><td rowspan="1">1683717483436</td><td rowspan="1">2465</td></tr><tr class="passedeven"><td><a href="#m1">testResponseUserData</a></td><td rowspan="1">1683717476405</td><td rowspan="1">7027</td></tr><tr class="passedeven"><td><a href="#m2">testUserData</a></td><td rowspan="1">1683717468719</td><td rowspan="1">7627</td></tr></tbody>
 </table>
-<h2>PetTests</h2><h3 id="m0">api.training.test.testUserDetails#testResponseUserData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">api.training.test.testUserDetails#testUserData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>PetTests</h2><h3 id="m0">api.training.test.testUserDetails#testGetJsonfieldData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">api.training.test.testUserDetails#testResponseUserData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">api.training.test.testUserDetails#testUserData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
