--- a/test-output/old/PetSuite/methods-alphabetical.html
+++ b/test-output/old/PetSuite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>PetSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c971a1">  <td>23/05/09 17:35:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testUserDetails.setup()[pri:0, instance:api.training.test.testUserDetails@73e22a3d]">&gt;&gt;setup</td> 
+<tr bgcolor="c971a1">  <td>23/05/10 16:47:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testUserDetails.setup()[pri:0, instance:api.training.test.testUserDetails@47faa49c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>23/05/09 17:35:19</td>   <td>3662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testResponseUserData()[pri:2, instance:api.training.test.testUserDetails@73e22a3d]">testResponseUserData</td> 
+<tr bgcolor="c971a1">  <td>23/05/10 16:48:03</td>   <td>14758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testGetJsonfieldData()[pri:3, instance:api.training.test.testUserDetails@47faa49c]">testGetJsonfieldData</td> 
   <td>main@1361960727</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>23/05/09 17:35:16</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testUserData()[pri:1, instance:api.training.test.testUserDetails@73e22a3d]">testUserData</td> 
+<tr bgcolor="c971a1">  <td>23/05/10 16:47:56</td>   <td>7727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testResponseUserData()[pri:2, instance:api.training.test.testUserDetails@47faa49c]">testResponseUserData</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="c971a1">  <td>23/05/10 16:47:48</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testUserDetails.testUserData()[pri:1, instance:api.training.test.testUserDetails@47faa49c]">testUserData</td> 
   <td>main@1361960727</td>   <td></td> </tr>
 </table>
